crates/dipa-derive-test/src/all_tests/ui/max_delta_batch_too_large.rs
use dipa_derive::DiffPatch;

#[derive(DiffPatch)]
#[dipa(max_fields_per_batch = 8)]
struct Foo;

fn main() {}
